--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NRS Website</title>
     <link rel="stylesheet" href="./styles/nrs.css">
 </head>
+
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <h3 class="nav-title">NRS Website</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Projects</h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+
+            <img class="banner-img" src="images/banner.png" alt="banner">
+
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
+
 </html>
